fix btn alignment issues

--- a/src/app/styles/components/Header.module.scss
+++ b/src/app/styles/components/Header.module.scss
@@ -16,7 +16,7 @@
 
 .iconContainer {
   @include flex-center;
-  // gap: rem(20);
+  gap: rem(6);
 
   & > button {
     @include flex-center;
